# Endn

./: .clang-format  .cmake-format  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml  qemu.yml
cmake/: FetchGTest.cmake
include/Endn/: Big.hpp  Endn.hpp  Helpers.hpp  Little.hpp
tests/: BigTests.cpp  CMakeLists.txt  LittleTests.cpp
